binrw/tests/ui/invalid_magic_type.stderr
error: expected byte string, byte, char, float, or int
 --> $DIR/invalid_magic_type.rs:5:14
  |
5 | #[br(magic = "invalid_type")]
  |              ^^^^^^^^^^^^^^
